# hanzi

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2025-03-16-125512_create_schema/: down.sql  up.sql
migrations/2025-03-16-143947_create_schema/: up.sql
migrations/2025-03-18-154557_create_schema/: up.sql
migrations/2025-03-26-064528_create_schema/: up.sql
migrations/2025-04-01-084731_add_settings/: up.sql
src/: app.rs  hanzi_logging.rs  llm.rs  main.rs  model.rs  persistence.rs  schema.rs  settings.rs  shortcuts.rs  transform.rs  ui.rs
src/persistence/: connection.rs  database_connection.rs  database_migration.rs  migration.rs  mod.rs  model.rs  read.rs  schema.rs  write.rs
src/screensize/: linux.rs  macos.rs  mod.rs
