[package]
name = "hanzi"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Gerd Reiss <gerd@reiss.pro>"]

[package.metadata.bundle]
name = "Hanzi"
identifier = "pro.reiss.hanzi"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.0.1"
resources = ["assets", "migrations"]
copyright = "Copyright (c) Gerd Reiss 2025. All rights reserved."
category = "Education"
short_description = "Chinese learning application."
long_description = """Chinese learning application"""
osx_url_schemes = ["pro.reiss.hanzi"]

[dependencies]
diesel = { version = "2.2.8", default-features = false, features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
eframe = "0.31.1"
egui = "0.31.1"
egui-modal-spinner = "0.3.0"
egui-notify = "0.19.0"
log = "0.4.27"
ollama-rs = "0.3.0"
poll-promise = { version = "0.3.0", features = ["tokio"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
