[package]
name = "hanzi"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Gerd Reiss <gerd@reiss.pro>"]

[package.metadata.bundle]
name = "Hanzi"
identifier = "pro.reiss.hanzi"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.0.1"
resources = ["assets", "migrations"]
copyright = "Copyright (c) Gerd Reiss 2025. All rights reserved."
category = "Education"
short_description = "Chinese learning application."
long_description = """Chinese learning application"""
osx_url_schemes = ["pro.reiss.hanzi"]

[dependencies]
diesel = { version = "2.2.12", default-features = false, features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
eframe = "0.32.2"
egui = "0.32.2"
egui_extras = "0.32.2"
egui-modal-spinner = "0.4.0"
egui-notify = "0.20.0"
humantime = "2.2.0"
fern = "0.7.1"
log = "0.4.27"
nonempty-collections = "1.0.1"
ollama-rs = "0.3.2"
poll-promise = { version = "0.3.0", features = ["tokio"] }
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"
